added client logic and improvements to bank logic